# HoopoeEngineReborn

./: .gitmodules  CMakeLists.txt  TODO.txt
Hoopoe_Core/: CMakeLists.txt
Hoopoe_Core/include/Hoopoe/: Application.hpp  Event.hpp  Log.hpp  OpenGLShader.hpp  application.hpp
Hoopoe_Core/src/Hoopoe/: Application.cpp  FIleManager.cpp  OpenGLShader.cpp  Window.cpp  Window.hpp  application.cpp
Hoopoe_Core/src/Hoopoe/Rendering/OpenGL/: ShaderProgram.cpp  ShaderProgram.hpp
Hoopoe_Edit/: CMakeLists.txt
Hoopoe_Edit/src/: main.cpp
Hoopoe_UTest/: CMakeLists.txt
Hoopoe_UTest/UTest_Core/: CMakeLists.txt
Hoopoe_UTest/UTest_Core/include/: UTest.hpp  UTestBase.hpp
Hoopoe_UTest/UTest_Core/src/: UTest.cpp  UTestBase.cpp
Hoopoe_UTest/UTest_Main/: CMakeLists.txt
Hoopoe_UTest/UTest_Main/src/: main.cpp
